--- a/package.json
+++ b/package.json
@@ -13,22 +13,32 @@
   "dependencies": {
     "@fontsource-variable/onest": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@types/jest": "^29.5.14",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "whatwg-fetch": "^3.6.20"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.13.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^3.7.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "whatwg-fetch": "^3.6.20"
   }
 }
