--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "surge": "^0.24.6",
     "vite": "^5.4.10",
     "whatwg-fetch": "^3.6.20"
   }
